src/scss/archive.scss
.archive-section {
    padding-top: 5px;
}

.archive-title {
  font-size: 30px;
}

.item {
  margin-top: 35px;
  margin-bottom: 35px;
  padding: 20px 40px;
}

.item__title {
  font-size: 20px;
  color: #1C274C;
  margin-bottom: 25px;
}

.item__meta {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 20px;
  margin-top: 5px;
}

.item__meta-icon {
  width: 35px;
  height: 35px;
  flex-shrink: 0;
}

.item__meta-text {
  font-size: 14px;
  color: #1C274C;
  margin-left: 3px;
}

.item__description {
  margin-top: 10px;
  color: #333;
  font-size: 15px;
}

@include media-breakpoint-up(md) {
  .item {
    padding: 30px 50px;
  }

  .item__title {
    margin-bottom: 30px;
  }

  .item__meta {
    margin-bottom: 0;
    margin-top: 10px;
  }

  .item__description {
    margin-top: 20px;
  }
}

